@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.util.ArrayList;
 import java.util.Deque;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -15,7 +14,7 @@ class ClassHierarchyTest {
   @Test
   void testOrder() {
     Deque<Class<?>> deque = ClassHierarchy.of(ArrayList.class);
-    List<String> list = deque.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    List<String> list = deque.stream().map(Class::getSimpleName).toList();
     assertEquals(list.toString(), "[Object, AbstractCollection, AbstractList, ArrayList]");
   }
 
